--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "compilerOptions": {
+  "compilerOptions": {
     "module": "commonjs",
     "declaration": true,
     "removeComments": true,
@@ -17,6 +17,9 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
-    "types": []
+    "types": [
+      "node",
+      "jest"
+    ]
   }
 }
