feat: Complete Telegram-style chat features & comprehensive documentation
✨ New Features:
- Telegram-style messaging (Reply, Edit, Forward, Delete, Pin)
- Voice messages with audio player
- Read receipts with visual indicators
- Message reactions and typing indicators
- Enhanced chat UI with context menus
- Voice & Video call integration

🔐 Security Enhancements:
- End-to-end encryption for all messages (AES-256-GCM)
- Read receipt tracking with lastReadAt
- Secure file sharing and voice messages
- Enhanced audit logging

🛠️ Backend Improvements:
- Message editing with re-encryption
- Message forwarding across conversations
- Threaded replies (parentMessageId)
- Message deletion (logical delete)
- New entities: MessageReaction, PinnedMessage, SystemSetting
- System settings module

🎨 Frontend Improvements:
- EnhancedMessageBubble component with full features
- ChatEnhancements (SearchBar, PinnedMessagesBanner)
- VoiceMessage player component
- Forward message modal
- Reply/Edit preview in input area
- Admin pages: AddUser, Network, SecurityRules, Settings

📚 Documentation:
- Complete README.md rewrite with installation guide
- 3 deployment methods (Docker, Local, Database Import)
- Cloudflare Tunnel integration guide
- Troubleshooting section
- API documentation
- Database export/import scripts

🔧 DevOps:
- Database export script (export-database.sh)
- Cloudflare tunnel scripts (start-tunnels.sh, check-tunnels.sh)
- Updated .gitignore for security
- Docker Compose improvements

📊 Database:
- 35 tables fully documented
- Export utilities for backup/restore
- Migration improvements

--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,21 @@ $RECYCLE.BIN/
 .fuse_hidden*
 .directory
 .Trash-*
+
+# ====== SECURITY & SENSITIVE DATA ======
+
+# Database exports (contains sensitive data)
+backend/src/database/exports/*.sql
+backend/src/database/exports/full_backup_*.sql
+
+# Uploaded files (may contain sensitive documents)
+uploads/
+uploads/**/*
+
+# Cloudflare tunnel binary
+cloudflared
+cloudflared.tgz
+
+# Tunnel logs (may contain URLs)
+logs/cloudflare-*.log
+logs/tunnel-urls.txt
