--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,6 +66,7 @@ services:
       - ./backend:/app
       - backend_node_modules:/app/node_modules
       - migration_done:/migration_done
+      - ./uploads:/app/uploads
     depends_on:
       - migrate
     restart: unless-stopped
