--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "joi": "^18.0.2",
     "passport-local": "^1.0.0",
     "qrcode": "^1.5.4",
+    "socket.io-client": "^4.8.3",
     "speakeasy": "^2.0.0"
   },
   "devDependencies": {
